--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "start": "node dist/index.js",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f"
+    "docker:logs": "docker-compose logs -f",
+    "test:firebase": "tsx src/plugins/firebase-messaging.test.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.18.2",
     "@hono/zod-validator": "^0.7.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "firebase-admin": "^13.4.0",
     "hono": "^4.9.2",
     "mongodb": "^6.18.0",
     "zod": "^4.0.17"
